--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/KaterynaHruvman/Node-HW-01#readme",
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "commander": "^8.0.0",
+    "shortid": "^2.2.16"
   }
 }
